[gd_scene load_steps=26 format=3 uid="uid://bciljy3o2i441"]

[ext_resource type="Texture2D" uid="uid://cq5tb3yb2j307" path="res://Oficina/sketch1704247249518.png" id="1_2407r"]
[ext_resource type="Texture2D" uid="uid://cr1thl56jcmdn" path="res://Oficina/sketch1704247207412.png" id="2_4s4x8"]
[ext_resource type="Texture2D" uid="uid://bv7pne2y3yx41" path="res://Oficina/sketch1704247267231.png" id="3_g02g1"]
[ext_resource type="Texture2D" uid="uid://e8g2v7m01gj0" path="res://Nuevo/Nuevo/Oficina/Sana.png" id="4_hhudt"]
[ext_resource type="Texture2D" uid="uid://vtmq7ynwlvay" path="res://Oficina/sketch1704247296150.png" id="5_21r55"]
[ext_resource type="Texture2D" uid="uid://dxat2wxjy24t5" path="res://Oficina/sketch1704247345325.png" id="6_d7mgt"]
[ext_resource type="Texture2D" uid="uid://dfyo8tp3jro4" path="res://sketch1710816424286.png" id="7_p180t"]
[ext_resource type="Texture2D" uid="uid://cp5esvm6yjs4a" path="res://Nuevo/Nuevo/Oficina/Marcadores.png" id="8_nerb2"]
[ext_resource type="Texture2D" uid="uid://btmkg2cctfu6j" path="res://Oficina/sketch1704247405312.png" id="9_7tfyn"]
[ext_resource type="Texture2D" uid="uid://cbqrqlphecpgb" path="res://Nuevo/moneda.png" id="9_7vgq6"]
[ext_resource type="Texture2D" uid="uid://dinrushjah7qh" path="res://Portada/conf..png" id="9_846jq"]
[ext_resource type="Script" path="res://Scenas/ConfiguracionTutorial.gd" id="9_yrrb6"]
[ext_resource type="Texture2D" uid="uid://c1fcmdd0csy8t" path="res://Oficina/sketch1704247394680.png" id="10_rq2fd"]
[ext_resource type="Texture2D" uid="uid://ctidibxtjiipj" path="res://Nuevo/empleados.png" id="10_tpcge"]
[ext_resource type="Texture2D" uid="uid://db57v2mbphrp0" path="res://Oficina/png-transparent-arrow-show-turn-symbol-direction-right-next-characters-icons-indicator-removebg-preview.png" id="11_deja2"]
[ext_resource type="Script" path="res://Scripts/Tutorial/Siguiente.gd" id="12_vw28y"]
[ext_resource type="FontVariation" uid="uid://dr78wllg6dqjc" path="res://Portada/Dial1.tres" id="13_jcb85"]
[ext_resource type="Script" path="res://Scripts/Tutorial/Flecha.gd" id="14_7wgm6"]
[ext_resource type="Texture2D" uid="uid://cmp36qug4erc6" path="res://Nuevo/Nuevo/Oficina/Captura-removebg-preview (1).png" id="16_0rmtx"]
[ext_resource type="Script" path="res://Scripts/Oficina/FelicidadCara.gd" id="17_q18w1"]
[ext_resource type="Texture2D" uid="uid://ed40d0mj4yja" path="res://Nuevo/felicidad 2.png" id="18_x55xx"]
[ext_resource type="Texture2D" uid="uid://b2obb4n2as2ct" path="res://Nuevo/felicidad 3.png" id="19_88yb8"]
[ext_resource type="Texture2D" uid="uid://cynco34lntpm4" path="res://Nuevo/felicidad 1.png" id="20_0yp16"]
[ext_resource type="PackedScene" uid="uid://c5rgod6xv4q68" path="res://Scenas/ajustes.tscn" id="22_dmss3"]

[sub_resource type="Theme" id="Theme_aflhn"]

[node name="EscenaTutorial" type="Node2D"]
metadata/Font = ""

[node name="Escenario" type="Node2D" parent="."]

[node name="Celeste" type="Sprite2D" parent="Escenario"]
position = Vector2(486, 330.331)
scale = Vector2(0.312533, 0.522219)
texture = ExtResource("1_2407r")

[node name="Nubes" type="Sprite2D" parent="Escenario/Celeste"]
position = Vector2(403.157, -117.443)
scale = Vector2(1.21761, 0.771471)
texture = ExtResource("2_4s4x8")

[node name="FondoOficina" type="Sprite2D" parent="Escenario/Celeste"]
position = Vector2(291.169, -10.2084)
scale = Vector2(1.83981, 1.03405)
texture = ExtResource("3_g02g1")

[node name="Sana" type="Sprite2D" parent="Escenario/Celeste/FondoOficina"]
position = Vector2(328.695, 97.2222)
scale = Vector2(0.473401, 0.468647)
texture = ExtResource("4_hhudt")

[node name="EscritorioySillaOficina" type="Sprite2D" parent="Escenario/Celeste/FondoOficina"]
position = Vector2(55.2677, -31.3846)
scale = Vector2(1.08808, 1.25692)
texture = ExtResource("5_21r55")

[node name="GatoOficina" type="Sprite2D" parent="Escenario/Celeste/FondoOficina/EscritorioySillaOficina"]
position = Vector2(361.905, 45.5324)
scale = Vector2(1.43828, 1.38422)
texture = ExtResource("6_d7mgt")

[node name="Ajustes" parent="Escenario" instance=ExtResource("22_dmss3")]
offset_left = 68.0
offset_top = 4.0
offset_right = 68.0
offset_bottom = 4.0

[node name="TextoNubes" type="Node2D" parent="."]

[node name="NubeSecretaria" type="Sprite2D" parent="TextoNubes"]
position = Vector2(484, 139)
scale = Vector2(0.534385, 0.460833)
texture = ExtResource("7_p180t")

[node name="SusanaDialogo" type="Label" parent="TextoNubes/NubeSecretaria"]
offset_left = -470.0
offset_top = -159.0
offset_right = 419.0
offset_bottom = 202.0
focus_mode = 2
theme = SubResource("Theme_aflhn")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Esta es tu oficina, Nuevo jefe, soy tu secretaria sana banana y te contare las eventualidades que sucedan en la oficina. Por ejemplo aqui abajo tenemos El dinero, este sirve para comprar o pagar cosas de las situaciones."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Marcadores" type="Sprite2D" parent="TextoNubes/NubeSecretaria"]
position = Vector2(177.307, 386.8)
scale = Vector2(1.10267, 1.24503)
texture = ExtResource("8_nerb2")

[node name="ConfiguracionTutorial" type="TextureButton" parent="TextoNubes/NubeSecretaria/Marcadores"]
offset_left = -994.06
offset_top = -552.941
offset_right = -888.06
offset_bottom = -453.941
script = ExtResource("9_yrrb6")

[node name="Configuracion" type="Sprite2D" parent="TextoNubes/NubeSecretaria/Marcadores/ConfiguracionTutorial"]
position = Vector2(60.642, 58.046)
scale = Vector2(0.148373, 0.168992)
texture = ExtResource("9_846jq")

[node name="LabelsStats" type="Node2D" parent="TextoNubes"]

[node name="VBoxContainer" type="VBoxContainer" parent="TextoNubes/LabelsStats"]
offset_left = 111.0
offset_top = 503.0
offset_right = 257.0
offset_bottom = 633.0
theme_override_constants/separation = 25
alignment = 1

[node name="Dinero" type="Label" parent="TextoNubes/LabelsStats/VBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "$100
"
autowrap_mode = 2

[node name="Moneda" type="Sprite2D" parent="TextoNubes/LabelsStats/VBoxContainer"]
position = Vector2(-36, 27)
scale = Vector2(0.141, 0.148)
texture = ExtResource("9_7vgq6")

[node name="Empleados" type="Label" parent="TextoNubes/LabelsStats/VBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "10"
autowrap_mode = 2

[node name="Empleados2" type="Sprite2D" parent="TextoNubes/LabelsStats"]
position = Vector2(69, 590)
scale = Vector2(0.1155, 0.127)
texture = ExtResource("10_tpcge")

[node name="Felicidad" type="Label" parent="TextoNubes/LabelsStats"]
offset_left = 251.0
offset_top = 572.0
offset_right = 350.0
offset_bottom = 639.0
theme_override_font_sizes/font_size = 48

[node name="HombreOficina" type="Sprite2D" parent="."]
visible = false
position = Vector2(614, 330)
scale = Vector2(0.617562, 0.629167)
texture = ExtResource("9_7tfyn")

[node name="MujerOficina" type="Sprite2D" parent="."]
visible = false
position = Vector2(610, 323)
scale = Vector2(0.60875, 0.6575)
texture = ExtResource("10_rq2fd")

[node name="Flechas" type="Node2D" parent="."]
position = Vector2(237, 452)
rotation = 2.46991
scale = Vector2(0.27, 0.308)

[node name="Flecha Icono" type="Sprite2D" parent="Flechas"]
position = Vector2(-1001.02, -67.0068)
rotation = 2.1257
scale = Vector2(0.912973, 1.00197)
skew = 0.0883461
texture = ExtResource("11_deja2")
script = ExtResource("14_7wgm6")

[node name="Flecha Dialogo" type="Sprite2D" parent="Flechas"]
position = Vector2(-389.735, -615.418)
rotation = 0.452533
scale = Vector2(0.841759, 1.12084)
skew = -0.0934349
texture = ExtResource("11_deja2")
script = ExtResource("14_7wgm6")

[node name="Flecha Ganacia" type="Sprite2D" parent="Flechas"]
position = Vector2(123.918, -15.8633)
rotation = -0.00656334
scale = Vector2(1.35592, 1.03283)
skew = 0.0544069
texture = ExtResource("11_deja2")
script = ExtResource("14_7wgm6")

[node name="Flecha Empleados" type="Sprite2D" parent="Flechas"]
position = Vector2(155.001, 297.85)
rotation = -0.019492
scale = Vector2(1.12852, 0.91293)
skew = 0.0368943
texture = ExtResource("11_deja2")
script = ExtResource("14_7wgm6")

[node name="Flecha dinero" type="Sprite2D" parent="Flechas"]
texture = ExtResource("11_deja2")
script = ExtResource("14_7wgm6")

[node name="TimerParpadeo" type="Timer" parent="Flechas"]
wait_time = 0.5
one_shot = true

[node name="TimerP2" type="Timer" parent="Flechas"]
wait_time = 0.5
one_shot = true

[node name="Siguiente" type="TextureButton" parent="."]
offset_left = 927.0
offset_top = 280.0
offset_right = 1128.0
offset_bottom = 356.0
script = ExtResource("12_vw28y")

[node name="Siguiente2" type="Sprite2D" parent="Siguiente"]
position = Vector2(109, 35)
scale = Vector2(0.2235, 0.227292)
texture = ExtResource("16_0rmtx")

[node name="Dial" type="Label" parent="Siguiente/Siguiente2"]
offset_left = -473.0
offset_top = -53.0
offset_right = 398.0
offset_bottom = 227.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("13_jcb85")
theme_override_font_sizes/font_size = 100
text = "Seguir"
horizontal_alignment = 1
autowrap_mode = 2
justification_flags = 0

[node name="Felicidad" type="Node2D" parent="."]
script = ExtResource("17_q18w1")

[node name="Felicidad2" type="Sprite2D" parent="Felicidad"]
position = Vector2(298, 605)
scale = Vector2(0.13, 0.13)
texture = ExtResource("18_x55xx")

[node name="Felicidad3" type="Sprite2D" parent="Felicidad"]
position = Vector2(298, 605)
scale = Vector2(0.13, 0.13)
texture = ExtResource("19_88yb8")

[node name="Felicidad1" type="Sprite2D" parent="Felicidad"]
position = Vector2(298, 605)
scale = Vector2(0.13, 0.13)
texture = ExtResource("20_0yp16")

[connection signal="pressed" from="TextoNubes/NubeSecretaria/Marcadores/ConfiguracionTutorial" to="Escenario/Ajustes" method="_on_configuracion_tutorial_pressed"]
[connection signal="pressed" from="TextoNubes/NubeSecretaria/Marcadores/ConfiguracionTutorial" to="TextoNubes/NubeSecretaria/Marcadores/ConfiguracionTutorial" method="_on_pressed"]
[connection signal="timeout" from="Flechas/TimerParpadeo" to="Flechas/Flecha Icono" method="_on_timer_parpadeo_timeout"]
[connection signal="timeout" from="Flechas/TimerParpadeo" to="Flechas/Flecha Dialogo" method="_on_timer_parpadeo_timeout"]
[connection signal="timeout" from="Flechas/TimerParpadeo" to="Flechas/Flecha Ganacia" method="_on_timer_parpadeo_timeout"]
[connection signal="timeout" from="Flechas/TimerParpadeo" to="Flechas/Flecha Empleados" method="_on_timer_parpadeo_timeout"]
[connection signal="timeout" from="Flechas/TimerParpadeo" to="Flechas/Flecha dinero" method="_on_timer_parpadeo_timeout"]
[connection signal="timeout" from="Flechas/TimerP2" to="Flechas/Flecha Icono" method="_on_timer_p_2_timeout"]
[connection signal="timeout" from="Flechas/TimerP2" to="Flechas/Flecha Dialogo" method="_on_timer_p_2_timeout"]
[connection signal="timeout" from="Flechas/TimerP2" to="Flechas/Flecha Ganacia" method="_on_timer_p_2_timeout"]
[connection signal="timeout" from="Flechas/TimerP2" to="Flechas/Flecha Empleados" method="_on_timer_p_2_timeout"]
[connection signal="timeout" from="Flechas/TimerP2" to="Flechas/Flecha dinero" method="_on_timer_p_2_timeout"]
[connection signal="mouse_entered" from="Siguiente" to="Siguiente" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Siguiente" to="Siguiente" method="_on_mouse_exited"]
[connection signal="pressed" from="Siguiente" to="Siguiente" method="_on_pressed"]
